k8s/fallback.yaml
apiVersion: v1
kind: Service
metadata:
  name: fallback
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: fallback
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fallback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fallback
  template:
    metadata:
      labels:
        app: fallback
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fallback
  namespace: default
  annotations:
    priority: 20
spec:
  rules:
  - host: foo
    http:
      paths:
      - backend:
          serviceName: fallback
          servicePort: http
        path: /
status:
  loadBalancer: {}
